--- a/planetary_diversity_arcologies/localisation/french/planetarydiversity_more_arcologies_capital_l_french.yml
+++ b/planetary_diversity_arcologies/localisation/french/planetarydiversity_more_arcologies_capital_l_french.yml
@@ -1,36 +1,37 @@
 ﻿l_french:
 
-#Senate
- decision_pd_arcology_senate: "Build Senate Dome"
- decision_pd_arcology_senate_desc: "To meet the expanding needs of our nation, we must construct a monumental senate building on our capital, dedicating substantial space to enhance our government's administration capabilities."
- decision_pd_arcology_senate_effects: "Adds the §Y$d_pd_senate_building$§! to this capital, exhanging potential distrticts to enhance our government's administration capabilities."
- d_pd_senate_building: "Senate Dome"
- d_pd_senate_building_desc: "The Senate Dome, a majestic symbol of governance, stands tall as the administrative heart where our civilization's future is forged."
+decision_pd_arcology_senate: "Construire le Dôme du Sénat"
+decision_pd_arcology_senate_desc: "Pour répondre aux besoins croissants de notre nation, nous devons construire un bâtiment du sénat monumental sur notre capitale, en consacrant un espace substantiel pour améliorer les capacités d'administration de notre gouvernement."
+decision_pd_arcology_senate_effects: "Ajoute le §Y$d_pd_senate_building$§! à cette capitale, en échangeant des districts potentiels pour améliorer les capacités d'administration de notre gouvernement."
+d_pd_senate_building: "Dôme du Sénat"
+d_pd_senate_building_desc: "Le Dôme du Sénat, un symbole majestueux de gouvernance, se dresse fièrement comme le cœur administratif où l'avenir de notre civilisation est forgé."
 
 #Palace
- decision_pd_arcology_palace: "Build Palatial Complex"
- decision_pd_arcology_palace_desc: "To reflect the might and authority of our empire, we shall erect a colossal palace within our capital. This grand edifice will embody the power of our leadership and significantly augment our governmental administration."
- decision_pd_arcology_palace_effects: "Adds the §Y$d_pd_palace_building$§! to this capital, exhanging potential distrticts to enhance our government's administration capabilities."
- d_pd_palace_building: "Palatial Complex"
- d_pd_palace_building_desc: "The Palace Complex, a grand symbol of our sovereignty and ruler's power, dominates the capital. It is the heart of governance, where our empire's destiny is shaped."
+ 
+decision_pd_arcology_palace: "Construire un Complexe Palatial"
+decision_pd_arcology_palace_desc: "Pour refléter la puissance et l'autorité de notre empire, nous érigerons un palais colossal au sein de notre capitale. Ce grand édifice incarnera le pouvoir de notre leadership et augmentera significativement notre administration gouvernementale."
+decision_pd_arcology_palace_effects: "Ajoute le §Y$d_pd_palace_building$§! à cette capitale, en échangeant des districts potentiels pour améliorer les capacités d'administration de notre gouvernement."
+d_pd_palace_building: "Complexe Palatial"
+d_pd_palace_building_desc: "Le Complexe Palatial, un grand symbole de notre souveraineté et du pouvoir de notre dirigeant, domine la capitale. C'est le cœur de la gouvernance, où le destin de notre empire est façonné."
 
 #Headquarters
- decision_pd_arcology_headquarters: "Build Planetary Headquarters"
- decision_pd_arcology_headquarters_desc: "To showcase the power and influence of our megacorporation, we will construct a towering headquarters in this economic hub. This imposing structure will represent our leadership's strength and greatly enhance our galatic operations."
- decision_pd_arcology_headquarters_effects: "Adds the §Y$d_pd_headquarters_building$§! to this capital, exhanging potential distrticts to enhance our corporation's administration capabilities."
- d_pd_headquarters_building: "Planetary Headquarters"
- d_pd_headquarters_building_desc: "A monumental symbol of dominanct, this headquarters towers over the planet. It serves as the nerve center for our operations, where the future of our megacorporation is crafted."
+ 
+decision_pd_arcology_headquarters: "Construire le Siège Planétaire"
+decision_pd_arcology_headquarters_desc: "Pour mettre en valeur le pouvoir et l'influence de notre mégacorporation, nous construirons un siège imposant dans ce pôle économique. Cette structure imposante représentera la force de notre leadership et améliorera considérablement nos opérations galactiques."
+decision_pd_arcology_headquarters_effects: "Ajoute le §Y$d_pd_headquarters_building$§! à cette capitale, en échangeant des districts potentiels pour renforcer les capacités d'administration de notre corporation."
+d_pd_headquarters_building: "Siège Planétaire"
+d_pd_headquarters_building_desc: "Symbole monumental de domination, ce siège domine la planète. Il sert de centre névralgique pour nos opérations, où l'avenir de notre mégacorporation est façonné."
 
 #Hive Confluence Spire
- decision_pd_hive_confluence_spire: "Build Confluence Spire"
- decision_pd_hive_confluence_spire_desc: "To manifest the supremacy and reach of our collective, we shall grow a mighty confluence spire. This commanding structure will significantly amplify our operations across the stars."
- decision_pd_hive_confluence_spire_effects: "Adds the §Y$d_pd_confluence_spire_building$§! to this capital, exhanging potential distrticts to enhance our administration capabilities."
- d_pd_confluence_spire_building: "Confluence Spire"
- d_pd_confluence_spire_building_desc: "This spire stands supreme across the planet's surface, a towering beacon of control. It is the hub of our collective will, where our path among the stars is intricately woven."
+decision_pd_hive_confluence_spire: "Construire la Flèche de Confluence"
+decision_pd_hive_confluence_spire_desc: "Pour manifester la suprématie et l'étendue de notre collectif, nous ferons croître une puissante flèche de confluence. Cette structure imposante amplifiera considérablement nos opérations à travers les étoiles."
+decision_pd_hive_confluence_spire_effects: "Ajoute le §Y$d_pd_confluence_spire_building$§! à cette capitale, en échangeant des districts potentiels pour renforcer nos capacités administratives."
+d_pd_confluence_spire_building: "Flèche de Confluence"
+d_pd_confluence_spire_building_desc: "Cette flèche domine la surface de la planète, un phare imposant de contrôle. C'est le centre de notre volonté collective, là où notre chemin parmi les étoiles est tissé avec intricacité."
 
 #Machine Centralized Processing
- decision_pd_machine_centralized_processing: "Build Centralized Processing Unit"
- decision_pd_machine_centralized_processing_desc: "To assert our superiority and extend operational capacity, we will construct a Centralized Processing Unit. This structure will significantly boost our galactic functions."
- decision_pd_machine_centralized_processing_effects: "Adds the §Y$d_pd_machine_centralized_processing$§! to this capital, exhanging potential distrticts to enhance our administration capabilities."
- d_pd_machine_centralized_processing: "Centralized Processing Unit"
- d_pd_machine_centralized_processing_desc: "This processing unit dominates the planetary surface and is the central node for our collective directives, intricately orchestrating our drones."
+decision_pd_machine_centralized_processing: "Construire une Unité de Traitement Centralisée"
+decision_pd_machine_centralized_processing_desc: "Pour affirmer notre supériorité et étendre notre capacité opérationnelle, nous construirons une Unité de Traitement Centralisée. Cette structure renforcera considérablement nos fonctions galactiques."
+decision_pd_machine_centralized_processing_effects: "Ajoute le §Y$d_pd_machine_centralized_processing$§! à cette capitale, en échangeant des districts potentiels pour renforcer nos capacités administratives."
+d_pd_machine_centralized_processing: "Unité de Traitement Centralisée"
+d_pd_machine_centralized_processing_desc: "Cette unité de traitement domine la surface planétaire et est le nœud central de nos directives collectives, orchestrant avec minutie nos drones."
