--- a/planetary_diversity_uniques/localisation/pd_uniques_l_english.yml
+++ b/planetary_diversity_uniques/localisation/pd_uniques_l_english.yml
@@ -6,7 +6,7 @@
  pd_floating: "Floating World"
  pd_floating_desc: "This strange world features islands that float in the sky, supported by a rare ore found only here. The multiple layers of islands provide the planet with significantly more living space."
  pc_pd_floating: "Floating World"
- pc_pd_floating_desc: "Dummy Class / Do Not Use"
+ pc_pd_floating_desc: "A strange world features islands that float in the sky, supported by a rare ore found only here. The multiple layers of islands provide the planet with significantly more living space."
  pc_pd_floating_adj: "floating"
  mod_pc_pd_floating_habitability: "Floating Habitability"
  trait_pc_pd_floating_preference: "Floating Preference"
@@ -50,7 +50,9 @@
  tech_eludium_floating_overseer: "Floating Overseer Stations"
  tech_eludium_floating_overseer_desc: "Using Eludium to keep structures aloft, we can create floating overseer stations to watch over our drones."
  building_pd_eludium_floating_overseer: "Floating Overseer Station"
- building_pd_eludium_floating_overseer_desc: "Using Eludium to keep the structures aloft, these floating overseer stations constantly remind our drones of their purpose."
+ building_pd_eludium_floating_overseer_desc: "Using Eludium to keep the structures aloft, these floating overseer stations constantly remind the drones of their purpose."
+ pd_origin_init_floating_NAME:0 "Floating System"
+ pd_origin_init_floating_DESC:0 "A starting system containing the Floating World"
 
  #Events
  pdfloating.100.name: "Islands in the Sky"
@@ -60,11 +62,20 @@
  #Origin
  origin_pd_floating_world:0 "Islands in the Sky"
  origin_pd_floating_world_desc:0 "This civilization evolved on a world unlike any other in the galaxy. Thanks to the element Eludium, this planet's landmasses float effortlessly through the sky."
- origin_tooltip_floating_world_effects:0 "- $HOMEWORLD$$TABBED_NEW_LINE$- Planet Class: §Y$pc_continental$§!$TABBED_NEW_LINE$- Planet Modifier: ['concept_pd_floating', $pd_floating$]"
- concept_pd_floating: "Floating World"
- concept_pd_floating_desc: "This world is floating! TODO"
-
-#- Homeworld is a §Y$pc_floating$§! (Size: £planetsize£ §Y20§!) with a §YRare Planetary Feature§!\n- Habitability preference is set to §Y$trait_pc_floating_preference$§!.\n- Has access to several unique technologies.\n- §RDoes not get any guaranteed habitable worlds.§!"
+ origin_tooltip_floating_world_effects:0 "- $HOMEWORLD$$TABBED_NEW_LINE$- §Y$pc_continental$§! (Size: £planetsize£ 20)$TABBED_NEW_LINE$- ['concept_pd_floating'] Planet Modifier$TABBED_NEW_LINE$- Two ['concept_d_pd_eludium_islands'] Planetary Features\n- Access To Additional Technologies:$TABBED_NEW_LINE$- ['concept_eludium_research', £physics_research£ $tech_eludium_research$]$TABBED_NEW_LINE$- ['concept_eludium_floating_islands', £physics_research£ $tech_eludium_floating_islands$]$TABBED_NEW_LINE$- ['concept_eludium_floating_resort', £physics_research£ $tech_eludium_floating_resort$] (Regular Empires)$TABBED_NEW_LINE$- ['concept_eludium_floating_overseer', £physics_research£ $tech_eludium_floating_overseer$] (Gestalt Empires)"
+ concept_pd_floating: "$pd_floating$"
+ concept_pd_floating_desc: "- $MOD_PLANET_MAX_DISTRICTS_ADD$: §G10§!\n- $mod_planet_districts_upkeep_mult$: §R25%§!\n- $mod_planet_buildings_upkeep_mult$: §R25%§"
+ concept_d_pd_eludium_islands: "$d_pd_eludium_islands$"
+ concept_d_pd_eludium_islands_desc: "- $mod_district_mining_max$: §G4§!\n- $planet_miners_sr_eludium_produces_add$: §G0.25§!"
+ planet_miners_sr_eludium_produces_add: "£sr_eludium£ $sr_eludium$ from £job_miner£ Miners"
+ concept_eludium_research: "$tech_eludium_research$"
+ concept_eludium_research_desc: "$tech_eludium_research_tt_desc$\n\n§L$tech_eludium_research_desc$§!"
+ concept_eludium_floating_islands: "$tech_eludium_floating_islands$"
+ concept_eludium_floating_islands_desc: "$tech_eludium_floating_islands_tt_desc$\n\n§L$tech_eludium_floating_islands_desc$§!"
+ concept_eludium_floating_resort: "$tech_eludium_floating_resort$"
+ concept_eludium_floating_resort_desc: "$i_unlocks_building$ ['building:building_pd_eludium_floating_resort']\n\n§L$tech_eludium_floating_resort_desc$§!"
+ concept_eludium_floating_overseer: "$tech_eludium_floating_overseer$"
+ concept_eludium_floating_overseer_desc: "$i_unlocks_building$ ['building:building_pd_eludium_floating_overseer']\n\n§L$tech_eludium_floating_overseer_desc$§!"
 
  #Techno-Organic Origin #TODO_GATEMAN - Simply ported this over to test
  origin_techno_world:0 "The Children of Unit 04"
