--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_domed_colonies_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_domed_colonies_l_simp_chinese.yml
@@ -80,16 +80,6 @@
  pd_domed_base_energy_desc: "先进的穹顶防护网络下都是发电厂和能量转换器。它接入了星系内的其他星球，依靠此种联系获取必要资源和输送能量。"
  pd_domed_base_food: "水培外围基地"
  pd_domed_base_food_desc: "先进的穹顶防护网络下都是水培农场和农业模块。它接入了星系内的其他星球，依靠此种联系获取必要资源和运输食物。"
- pd_domed_moonbase_site_1: "外围基地选址（卫星）"
- pd_domed_moonbase_site_1_desc: "这颗卫星是建造外围基地的理想地点，但星系内得有一颗已殖民星球，来保证其资源供给和运维能力。"
- pd_domed_research_site_1: "外围基地潜在选址（科研）"
- pd_domed_research_site_1_desc: "这颗行星是建造科研穹顶基地的理想地点，但星系内得有一颗已殖民星球，来保证其资源供给和运维能力。"
- pd_domed_mining_site_1: "外围基地潜在选址（采矿）"
- pd_domed_mining_site_1_desc: "这颗行星是建造采矿穹顶基地的理想地点，但星系内得有一颗已殖民星球，来保证其资源供给和运维能力。"
- pd_domed_food_site_1: "外围基地潜在选址（水培）"
- pd_domed_food_site_1_desc: "这颗行星是建造水培穹顶基地的理想地点，但星系内得有一颗已殖民星球，来保证其资源供给和运维能力。"
- pd_domed_energy_site_1: "外围基地潜在选址（发电）"
- pd_domed_energy_site_1_desc: "这颗行星是建造发电穹顶基地的理想地点，但星系内得有一颗已殖民星球，来保证其资源供给和运维能力。"
  d_phab_energy_1: "放射性同位素"
  d_phab_energy_1_desc: "这个地方有丰富的放射性同位素储藏，且易于开采，是高效发电的理想之选。"
  d_phab_energy_2: "冻气湖"
@@ -155,8 +145,16 @@
  concept_pd_moonbases: "外围基地"
  concept_pd_domed_colonies: "穹顶殖民地"
  requires_no_terraforming:1 "$TRIGGER_FAIL$不可建造于正在环境改造的星球。"
-
-#Jan 2025 Update - Decisions to make Outposts
+ pd_domed_moonbase_site_1: "外围基地选址（卫星）"
+ pd_domed_moonbase_site_1_desc: "这颗卫星是建造外围基地的理想地点，但星系内得有一颗已殖民星球，来保证其资源供给和运维能力。"
+ pd_domed_research_site_1: "外围基地潜在选址（科研）"
+ pd_domed_research_site_1_desc: "这颗行星是建造科研穹顶基地的理想地点，但星系内得有一颗已殖民星球，来保证其资源供给和运维能力。"
+ pd_domed_mining_site_1: "外围基地潜在选址（采矿）"
+ pd_domed_mining_site_1_desc: "这颗行星是建造采矿穹顶基地的理想地点，但星系内得有一颗已殖民星球，来保证其资源供给和运维能力。"
+ pd_domed_food_site_1: "外围基地潜在选址（水培）"
+ pd_domed_food_site_1_desc: "这颗行星是建造水培穹顶基地的理想地点，但星系内得有一颗已殖民星球，来保证其资源供给和运维能力。"
+ pd_domed_energy_site_1: "外围基地潜在选址（发电）"
+ pd_domed_energy_site_1_desc: "这颗行星是建造发电穹顶基地的理想地点，但星系内得有一颗已殖民星球，来保证其资源供给和运维能力。"
  pd_domed_moonbase_site_2: "$pd_domed_moonbase_site_1$"
  pd_domed_moonbase_site_2_desc: "$pd_domed_moonbase_site_1_desc$"
  pd_domed_moonbase_site_3: "$pd_domed_moonbase_site_1$"
@@ -181,36 +179,36 @@
  pd_domed_energy_site_2_desc: "$pd_domed_energy_site_1_desc$"
  pd_domed_energy_site_3: "$pd_domed_energy_site_1$"
  pd_domed_energy_site_3_desc: "$pd_domed_energy_site_1_desc$"
- decision_build_pd_moon_base: "Build Moon Outpost"
- decision_build_pd_moon_base_desc: "We will construct Moon Outposts on the moon or moons of this world."
+ decision_build_pd_moon_base: "铸造外围基地（卫星）"
+ decision_build_pd_moon_base_desc: "我们会在该星球的卫星上建立外围卫星基地。"
  decision_build_pd_moon_base_moon_colony: "$decision_build_pd_moon_base$"
- decision_build_pd_moon_base_moon_colony_desc: "We will construct Moon Outposts on the other moon or moons of the planet this world orbits."
- decision_build_pd_mining_base: "Build Mining Outpost in System"
- decision_build_pd_mining_base_desc: "We will construct a Planetary Mining Outpost on an uninhabitable world in this solar system."
+ decision_build_pd_moon_base_moon_colony_desc: "我们会在该星球所环绕运行之行星的其他卫星上建立外围卫星基地。"
+ decision_build_pd_mining_base: "在星系中建立开采基地"
+ decision_build_pd_mining_base_desc: "我们会在该星系的一个非宜居星球上建立外围采矿基地。"
  decision_build_pd_mining_base_2: "$decision_build_pd_mining_base$"
  decision_build_pd_mining_base_2_desc: "$decision_build_pd_mining_base_desc$"
  decision_build_pd_mining_base_3: "$decision_build_pd_mining_base$"
  decision_build_pd_mining_base_3_desc: "$decision_build_pd_mining_base_desc$"
- decision_build_pd_food_base: "Build Hydroponics Outpost in System"
- decision_build_pd_food_base_desc: "We will construct a Planetary Hydroponics Outpost on an uninhabitable world in this solar system."
+ decision_build_pd_food_base: "在星系中建立水培基地"
+ decision_build_pd_food_base_desc: "我们会在该星系的一个非宜居星球上建立外围水培基地。"
  decision_build_pd_food_base_2: "$decision_build_pd_food_base$"
  decision_build_pd_food_base_2_desc: "$decision_build_pd_food_base_desc$"
  decision_build_pd_food_base_3: "$decision_build_pd_food_base$"
  decision_build_pd_food_base_3_desc: "$decision_build_pd_food_base_desc$"
- decision_build_pd_energy_base: "Build Generator Oupost in System"
- decision_build_pd_energy_base_desc: "We will construct a Planetary Generator Outpost on an uninhabitable world in this solar system."
+ decision_build_pd_energy_base: "在星系中建立发电基地"
+ decision_build_pd_energy_base_desc: "我们会在该星系的一个非宜居星球上建立外围发电基地。"
  decision_build_pd_energy_base_2: "$decision_build_pd_energy_base$"
  decision_build_pd_energy_base_2_desc: "$decision_build_pd_energy_base_desc$"
  decision_build_pd_energy_base_3: "$decision_build_pd_energy_base$"
  decision_build_pd_energy_base_3_desc: "$decision_build_pd_energy_base_desc$"
- decision_build_pd_research_base: "Build Research Outpost in System"
- decision_build_pd_research_base_desc: "We will construct a Planetary Research Outpost on an uninhabitable world in this solar system."
+ decision_build_pd_research_base: "在星系中建立研究基地"
+ decision_build_pd_research_base_desc: "我们会在该星系的一个非宜居星球上建立外围研究基地。"
  decision_build_pd_research_base_2: "$decision_build_pd_research_base$"
  decision_build_pd_research_base_2_desc: "$decision_build_pd_research_base_desc$"
  decision_build_pd_research_base_3: "$decision_build_pd_research_base$"
  decision_build_pd_research_base_3_desc: "$decision_build_pd_research_base_desc$"
- MAKE_MOON_BASES: "§YMoon Outpost§! is constructed."
- MAKE_MINIG_BASES: "§YMining Outpost§! is constructed."
- MAKE_FOOD_BASES: "§YHydroponics Outpost§! is constructed."
- MAKE_ENERGY_BASES: "§YGenerator Outpost§! is constructed."
- MAKE_RESEARCH_BASES: "§YResearch Outpost§! is constructed."
+ MAKE_MOON_BASES: "§Y外围基地（卫星）§!已建成。"
+ MAKE_MINIG_BASES: "§Y外围基地（采矿）§!已建成。"
+ MAKE_FOOD_BASES: "§Y外围基地（水培）§!已建成。"
+ MAKE_ENERGY_BASES: "§Y外围基地（发电）§!已建成。"
+ MAKE_RESEARCH_BASES: "§Y外围基地（研究）§!已建成。"
