--- a/planetary_diversity_uniques/localisation/english/pd_uniques_l_english.yml
+++ b/planetary_diversity_uniques/localisation/english/pd_uniques_l_english.yml
@@ -190,10 +190,54 @@
  edict_acean_minerals_desc: "By using the Acean Crystal to encourage mineral growth, we can greatly improve mining output."
 
 ###Biosynthetic World
+ #Planet and Modifiers
  pd_biosynth: "Biosynthetic World"
  pd_biosynth_desc: "TODO"
  pc_pd_biosynth: "$pd_biosynth$"
  pc_pd_biosynth_desc: "$pd_biosynth_desc$"
+ mod_planet_farmers_engineering_research_produces_add: "£engineering£ $engineering_research$ from £job_farmer£ [GetFarmerPlural]"
+
+ #Deposits
+ d_pd_depleted_minerals: "Depleted Minerals"
+ d_pd_depleted_minerals_desc: "Although there are no signs of mining or extraction, scans reveal that this planet's minerals have been almost entirely depleted."
+ d_pd_planet_wide_canal_system: "Planet Wide Canal System"
+ d_pd_planet_wide_canal_system_desc: "Every inch of arable land on this planet is covered by an intricate canal system, channeling water to sustain a peculiar grass species. While vital for the vegetation, the canals pose significant challenges to construction efforts."
+ d_pd_biosyth_canal:0 "Biosynthetic Canal System"
+ d_pd_biosyth_canal_desc:0 "Based on those on the Biosynthetic World these canals enhance the planet's agricultural output and novel engineering opportunities."
+
+ #Events
  pdbiosynth.100.name: "A Synthetic World"
  pdbiosynth.100.desc: "Scans of §Y[From.GetName]§! indicate extensive orbital damage and a sophisticated canal system supporting select flora and synthetic fauna, but no cities, factories, or other signs of its creators. The origins and purpose of this infrastructure remain unknown.\n\nThis planet's advanced systems and unresolved mysteries present scientific and strategic opportunities. Colonization is recommended to secure and investigate further."
  pdbiosynth.100.a: "How interesting."
+
+ #Technology
+ tech_biosynth_canals: "Biosynthetic Canals"
+ tech_biosynth_canals_desc: "By studying the canal system present on the Biosynthetic World, we may be able to replicate smaller versions on other planets to improve agricultural output."
+ tech_biosynth_canals_tt_desc: "§HUnlocks Decision:§! $decision_pd_add_biosynth_canal_system$"
+ tech_biosynth_cauldron: "Biosynthetic Cauldrons"
+ tech_biosynth_cauldron_desc: "Inspired by the underground factories in the Biosynthetic World, we should be able to create adaptable factories built with living metal to significantly enhance industrial output."
+ #tech_biosynth_cauldron_tt_desc: "REPLACE_ME"
+
+ #Decisions
+ decision_pd_add_biosynth_canal_system: "Construct Biosynthetic Canal System"
+ decision_pd_add_biosynth_canal_system_desc: "Based on those on the Biosynthetic World, we can construct canals to enhance this planet's agricultural output."
+
+ #Buildings
+ building_pd_biosynth_cauldron: "Biosynthetic Cauldron"
+ building_pd_biosynth_cauldron_desc: "TODO"
+
+ #Jobs
+ job_pd_biosynth_engineer: "Biosynthetic Engineer"
+ job_pd_biosynth_engineer_plural: "Biosynthetic Engineer"
+ job_pd_biosynth_engineer_desc: "TODO"
+ mod_job_pd_biosynth_engineer_add: "$job_pd_biosynth_engineer$ Job"
+ mod_job_pd_biosynth_engineer_per_pop: "§G+1§! $job_pd_biosynth_engineer$ Job per $VALUE$ Pops"
+ mod_job_pd_biosynth_engineer_per_pop_short: "\n§G+1§! £mod_job_pd_biosynth_engineer_add£ per $VALUE$ £pop£"
+ job_pd_biosynth_engineer_effect_desc: "£job_pd_biosynth_engineer£ $job_pd_biosynth_engineer_plural$ produce by turning £consumer_goods£ §Y$consumer_goods$§! into £society£ & £engineering£ §YResearch Points§!, and $i_living_metal$ on the Biosynthetic World."
+ job_pd_biosynth_engineer_drone: "Biosynthetic Engineering Dorne"
+ job_pd_biosynth_engineer_drone_plural: "Biosynthetic Engineering Dornes"
+ job_pd_biosynth_engineer_drone_desc: "TODO"
+ mod_job_pd_biosynth_engineer_drone_add: "$job_pd_biosynth_engineer_drone$ Job"
+ mod_job_pd_biosynth_engineer_drone_per_pop: "§G+1§! $job_pd_biosynth_engineer_drone$ Job per $VALUE$ Pops"
+ mod_job_pd_biosynth_engineer_drone_per_pop_short: "\n§G+1§! £mod_job_pd_biosynth_engineer_drone_add£ per $VALUE$ £pop£"
+ job_pd_biosynth_engineer_drone_effect_desc: "£job_pd_biosynth_engineer_drone£ $job_pd_biosynth_engineer_drone_plural$ produce by turning £consumer_goods£ §Y$consumer_goods$§! into £society£ & £engineering£ §YResearch Points§!, and $i_living_metal$ on the Biosynthetic World."
