--- a/planetary_diversity_uniques/localisation/english/pd_uniques_l_english.yml
+++ b/planetary_diversity_uniques/localisation/english/pd_uniques_l_english.yml
@@ -216,7 +216,9 @@
  tech_biosynth_canals_tt_desc: "§HUnlocks Decision:§! $decision_pd_add_biosynth_canal_system$"
  tech_biosynth_cauldron: "Biosynthetic Cauldrons"
  tech_biosynth_cauldron_desc: "Inspired by the underground factories in the Biosynthetic World, we should be able to create adaptable factories built with living metal to significantly enhance industrial output."
- #tech_biosynth_cauldron_tt_desc: "REPLACE_ME"
+ tech_biosynth_edicts: "Living Metal Utilization"
+ tech_biosynth_edicts_desc: "Thanks to the intricate examples provided by Unit 04's underground Cauldron production lines, we have discovered several novel applications for Living Metal."
+ tech_biosynth_edicts_tooltip: "§HUnlocks:§! Living Metal Edicts"
 
  #Decisions
  decision_pd_add_biosynth_canal_system: "Construct Biosynthetic Canal System"
@@ -224,20 +226,28 @@
 
  #Buildings
  building_pd_biosynth_cauldron: "Biosynthetic Cauldron"
- building_pd_biosynth_cauldron_desc: "TODO"
+ building_pd_biosynth_cauldron_desc: "This advanced production plant can adapt its output to meet the needs of the planet, using Living Metal to reconfigure entire factory systems with remarkable speed."
 
  #Jobs
  job_pd_biosynth_engineer: "Biosynthetic Engineer"
  job_pd_biosynth_engineer_plural: "Biosynthetic Engineer"
- job_pd_biosynth_engineer_desc: "TODO"
+ job_pd_biosynth_engineer_desc: "These specialized engineers keep the advanced Biosynthetic Cauldron running smoothly."
  mod_job_pd_biosynth_engineer_add: "$job_pd_biosynth_engineer$ Job"
  mod_job_pd_biosynth_engineer_per_pop: "§G+1§! $job_pd_biosynth_engineer$ Job per $VALUE$ Pops"
  mod_job_pd_biosynth_engineer_per_pop_short: "\n§G+1§! £mod_job_pd_biosynth_engineer_add£ per $VALUE$ £pop£"
  job_pd_biosynth_engineer_effect_desc: "£job_pd_biosynth_engineer£ $job_pd_biosynth_engineer_plural$ produce by turning £consumer_goods£ §Y$consumer_goods$§! into £society£ & £engineering£ §YResearch Points§!, and $i_living_metal$ on the Biosynthetic World."
  job_pd_biosynth_engineer_drone: "Biosynthetic Engineering Dorne"
  job_pd_biosynth_engineer_drone_plural: "Biosynthetic Engineering Dornes"
- job_pd_biosynth_engineer_drone_desc: "TODO"
+ job_pd_biosynth_engineer_drone_desc: "These specialized engineering drones keep the advanced Biosynthetic Cauldron running smoothly."
  mod_job_pd_biosynth_engineer_drone_add: "$job_pd_biosynth_engineer_drone$ Job"
  mod_job_pd_biosynth_engineer_drone_per_pop: "§G+1§! $job_pd_biosynth_engineer_drone$ Job per $VALUE$ Pops"
  mod_job_pd_biosynth_engineer_drone_per_pop_short: "\n§G+1§! £mod_job_pd_biosynth_engineer_drone_add£ per $VALUE$ £pop£"
  job_pd_biosynth_engineer_drone_effect_desc: "£job_pd_biosynth_engineer_drone£ $job_pd_biosynth_engineer_drone_plural$ produce by turning £consumer_goods£ §Y$consumer_goods$§! into £society£ & £engineering£ §YResearch Points§!, and $i_living_metal$ on the Biosynthetic World."
+
+ #Edicts
+ edict_pd_living_metal_robot_assembly: "Living Metal Robot Assembly"
+ edict_pd_living_metal_robot_assembly_desc: "The integration of Living Metal into robotic production processes dramatically accelerates construction times."
+ edict_pd_living_metal_engineering: "Living Metal Research Grants"
+ edict_pd_living_metal_engineering_desc: "Providing our research departments with access to Living Metal for study significantly accelerates engineering breakthroughs"
+ edict_pd_living_metal_ship_repair: "Living Metal Ship Repair"
+ edict_pd_living_metal_ship_repair_desc: "The regenerative properties of Living Metal can be harnessed to enhance our fleet, significantly increasing armor and hull repair speeds."
