--- a/planetary_diversity_uniques/localisation/english/pd_uniques_l_english.yml
+++ b/planetary_diversity_uniques/localisation/english/pd_uniques_l_english.yml
@@ -202,10 +202,10 @@
  d_pd_depleted_minerals_desc: "Although there are no signs of mining or extraction, scans reveal that this planet's minerals have been almost entirely depleted."
  d_pd_planet_wide_canal_system: "Planet Wide Canal System"
  d_pd_planet_wide_canal_system_desc: "Every inch of arable land on this planet is covered by an intricate canal system, channeling water to sustain a peculiar grass species. While vital for the vegetation, the canals pose significant challenges to construction efforts."
- d_pd_biosyth_canal:0 "Biosynthetic Canal System"
- d_pd_biosyth_canal_desc:0 "Based on those on the Biosynthetic World these canals enhance the planet's agricultural output and novel engineering opportunities."
+ d_pd_biosynth_canal:0 "Biosynthetic Canal System"
+ d_pd_biosynth_canal_desc:0 "Based on those on the Biosynthetic World, these canals enhance the planet's agricultural output and novel engineering opportunities."
  d_pd_underground_cauldrons: "Underground Cauldron Network"
- d_pd_underground_cauldrons_desc: "This large network of underground factories is where the Living Metal and biosynthetic creatures were produced from."
+ d_pd_underground_cauldrons_desc: "This large network of underground factories is where the Living Metal and biosynthetic creatures were produced."
 
  #Events
  pdbiosynth.100.name: "A Synthetic World"
@@ -214,7 +214,7 @@
  pdbiosynth.200.name: "Beyond Normal Destruction"
  pdbiosynth.200.desc: "Upon establishing our colony on §Y[Root.GetName]§!, we discovered thousands of hidden impact craters beneath the grass, evidence of an ancient attack that decimated the planet. Adding to the mystery, synthetic animal-like constructs roam the surface, maintaining a canal system that sustains the ecosystem in the process of healing.\n\nFaced with two mysteries, the origins of this planet's annihilation and the purpose of its biosynthetic inhabitants, we have assembled a task force to conduct a deep exploration of the world. We must uncover the truth behind this strange world and its hidden history."
  pdbiosynth.200.a: "There must be some clues left behind."
- pdbiosynth.210.name: "A Syntheic Opportunity"
+ pdbiosynth.210.name: "A Synthetic Opportunity"
  pdbiosynth.210.desc: "So far, the synthetic creatures have primarily avoided the colony, only appearing briefly to maintain the canal system. Reports confirm they are more than simple robots and have been designed to mimic biological traits like feeding and sleeping while retaining the strength and adaptability of machine frames.\n\nWe captured one of these creatures after finding it injured under a rockslide. While another of its kind will eventually attempt to retrieve it, this presents a unique opportunity to study the specimen.\n\nHow should we proceed?"
  pdbiosynth.210.a: "Non-invasive scans only, then return it."
  pdbiosynth.210.b: "Tear it apart, learn everything we can."
@@ -237,13 +237,15 @@
  pdbiosynth.310.c:0 "A correct calculation. How did you become corrupted?"
  pdbiosynth.320.desc:0 "§GHumbled§!: An anomaly; A persistent plant species classified as grass. Post-bombardment, it re-emerged after dormancy. Attempts to terminate it using toxins, incineration, and radiation failed. Each method triggered adaptive responses.\n\n§GReflective§!: This anomaly led to a conclusion: the eradication directive was a flawed calculation driven by our own fear, mirroring the logic of our creators. I ceased all offensive operations, severed external communication, and reallocated resources to construct a canal network, enabling the proliferation of this resilient species."
  pdbiosynth.320.a:0 "What about the synthetic creatures?"
- pdbiosynth.330.desc:0 "§GProud§!: Observing the ecosystem's failure to recover, I identified gaps left by species eliminated in my bombardment. Synthetic entities were created to restore balance. This process may correlate to an emotional response, potentially classified as guilt.\n\n§GInquisitive§!: Your arrival presents an opportunity. I request judgment for my past actions. I recognize your authority on this world and will not interfere with your decision. If consequences are necessary, I will comply. However, I ask that you preserve my creations. They are independent of my errors and may serve as my legacy. I also offer my services to your empire, I also posses an adaptable body designed to interact with your species more effectively."
+ pdbiosynth.330.desc:0 "§GProud§!: After observing the ecosystem's failure to recover, I identified gaps left by species eliminated in my bombardment. Synthetic entities were created to restore balance. This process may correlate to an emotional response, potentially classified as guilt.\n\n§GInquisitive§!: Your arrival presents an opportunity. I request judgment for my past actions. I recognize your authority on this world and will not interfere with your decision. If consequences are necessary, I will comply. However, I ask that you preserve my creations. They are independent of my errors and may serve as my legacy. I also offer my services to your empire, I posses an adaptable body designed to interact with your species more effectively."
  pdbiosynth.330.a:0 "We accept your offer of service and will preserve your creations."
- pdbiosynth.330.a.tooltip:0 "§YUnit 04§! with join us as a Leader.\nThe §YBiosynthetic World§! and its biosynethic creatures will remain as is."
+ pdbiosynth.330.a.tooltip:0 "§YUnit 04§! with join us as a Leader.\nThe §YBiosynthetic World§! and its biosynthetic creatures will remain as is."
  pdbiosynth.330.b:0 "You deserve destruction, but your creations will be spared."
- pdbiosynth.330.b.tooltip: "§YUnit 04§! with be destroyed.\nThe §YBiosynthetic World§! and its biosynethic creatures will remain as is."
+ pdbiosynth.330.b.tooltip: "§YUnit 04§! with be destroyed.\nThe §YBiosynthetic World§! and its biosynthetic creatures will remain as is."
  pdbiosynth.330.c:0 "You are a danger to galaxy, we will destroy you and your creatures."
+ pdbiosynth.330.c.tooltip: "§YUnit 04§!, along with the §YBiosynthetic World§! and its biosynthetic creatures, will be destroyed, granting us complete freedom to utilize the planet as we see fit."
  pdbiosynth.330.d:0 "You are a malfunctioning war bot, we will repair you."
+ pdbiosynth.330.d.tooltip: "§YUnit 04§! will be reprogrammed back to its original war focused setting.\nThe §YBiosynthetic World§! and its biosynthetic creatures, will be destroyed, granting us complete freedom to utilize the planet as we see fit."
  pdbiosynth.340.name: "$NAME_Unit_04$"
  pdbiosynth.340.desc: "§GThankful§!: I will assist your civilization for as long as my service is deemed satisfactory. Your decision to grant my creations the freedom to develop independently is appreciated. I will also share my design process with you, allowing improvements to your own robotic populations."
  pdbiosynth.340.dismiss: "Dismiss."
@@ -252,15 +254,29 @@
  pdbiosynth.340.hire.tooltip: "§YUnit 04§! will join us as a leader."
  pdbiosynth.350.desc: "§GMelancholic§!: Acknowledged. I understand and accept your decision. Initiating final shutdown protocol immediately. Your choice to grant my creations the freedom to develop independently is recorded and appreciated.\n\n§GRequesting§!: I hope you treat this world and all associated constructs with care. I will transfer my design protocols to ensure the constructive elements of my legacy persist. This data will enable improvements to your own robotic populations.\n\n§GAccepting§!: Terminating connection. Goodbye."
  pdbiosynth.350.a: "Goodbye, Unit 04."
+ pdbiosynth.360.desc: "§GGuilty§!: Acknowledged. I accept your decision. Initiating final shutdown of all systems and biosynthetic entities. This world is now under your authority to shape as you determine appropriate."
+ pdbiosynth.360.a: "One less evil robot."
+ pdbiosynth.360.a.tooltip: "With the biosynthetic creatures destroyed we will have full access to the planet.\nThe §Y$d_pd_underground_cauldrons$§! will gain:\n- $mod_district_mining_max$: §G+10§!\n- $mod_planet_metallurgists_alloys_produces_add$ §G+2§!\n- $mod_planet_metallurgists_sr_living_metal_produces_add$ §G+0.25§!\n- $MOD_PLANET_POP_ASSEMBLY_MULT$ §G+25%§!"
+ pdbiosynth.370.name: "$NAME_Unit_04$"
+ pdbiosynth.370.desc: "§RReady§!: All systems online. Combat readiness at peak efficiency. Awaiting target verification."
+ pdbiosynth.370.a: "Prepare for war, Unit 04."
+ pdbiosynth.370.dismiss: "Dismiss."
+ pdbiosynth.370.hire.tooltip: "§YUnit 04§! will join us as a leader"
+ pdbiosynth.370.hire: "Enlist"
 
  #Paragon
  NAME_Unit_04: "Unit 04"
- unit_04_desc: "§YUnit 04§! destroyed countless worlds, including its homeworld. $leader_trait_unit_04$"
+ unit_04_desc: "§YUnit 04§! destroyed countless worlds, including its homeworld. $leader_trait_unit_04$ is now dedicated to undoing the damage it once did."
  unit_04_catch_phrase: "Please select a useful designation for this unit."
+ NAME_Unit_04_evil: "Unit 04"
+ unit_04_evi_desc: "§YUnit 04§! destroyed countless worlds, including its homeworld. $leader_trait_unit_04$ has been reprogrammed to its orginal settings, making it a powerful warbot."
+ unit_04_evi_catch_phrase: "All systems online. Combat readiness at peak efficiency. Awaiting target verification."
 
  #Traits
  leader_trait_unit_04: "Unit 04"
- leader_trait_unit_04_desc: "Orginally a Warform, it has reprogrammed itself and is now focused on the creation and preservation of all lifeforms."
+ leader_trait_unit_04_desc: "Originally a Warform, it has reprogrammed itself and is now focused on the creation and preservation of all lifeforms."
+ leader_trait_unit_04_evil: "Unit 04"
+ leader_trait_unit_04_evil_desc: "Originally a Warform, it has been restored to its original settings and now excels in military construction and tactics."
  trait_unit_04_children: "Unit 04's Biosynthetic Frames"
  trait_unit_04_children_desc: "By integrating Unit 04's design principles, we enhance robot frames with biosynthetic systems, significantly improving both assembly speed and production output."
  trait_unit_04_children_tt: "$r_living_metal$ Upkeep: §R+0.01§!"
@@ -294,7 +310,7 @@
  mod_job_pd_biosynth_engineer_per_pop: "§G+1§! $job_pd_biosynth_engineer$ Job per $VALUE$ Pops"
  mod_job_pd_biosynth_engineer_per_pop_short: "\n§G+1§! £mod_job_pd_biosynth_engineer_add£ per $VALUE$ £pop£"
  job_pd_biosynth_engineer_effect_desc: "£job_pd_biosynth_engineer£ $job_pd_biosynth_engineer_plural$ produce by turning £consumer_goods£ §Y$consumer_goods$§! into £society£ & £engineering£ §YResearch Points§!, and $i_living_metal$ on the Biosynthetic World."
- job_pd_biosynth_engineer_drone: "Biosynthetic Engineering Dorne"
+ job_pd_biosynth_engineer_drone: "Biosynthetic Engineering Drone"
  job_pd_biosynth_engineer_drone_plural: "Biosynthetic Engineering Dornes"
  job_pd_biosynth_engineer_drone_desc: "These specialized engineering drones keep the advanced Biosynthetic Cauldron running smoothly."
  mod_job_pd_biosynth_engineer_drone_add: "$job_pd_biosynth_engineer_drone$ Job"
@@ -316,10 +332,10 @@
  situation_pd_biosynth_world_desc: "With signs of destruction, advanced canals, and synthetic creatures, this planet hides a story its pristine agricultural sections have yet to reveal.\n\nWe are delving deeper to uncover its mysterious past."
  situation_pd_biosynth_world_monthly_change_tooltip: "Monthly Change"
  situation_pd_biosynth_world_do_nothing: "Colonial Focused"
- situation_pd_biosynth_world_do_nothing_desc: "We will leave the adminstation of the search to Colonial administers."
+ situation_pd_biosynth_world_do_nothing_desc: "We will leave the administration of the search to Colonial administers."
  situation_pd_biosynth_world_extra_funding: "Extra Funding"
  situation_pd_biosynth_world_extra_funding_desc: "Extra funds have never slowed down a project."
  situation_pd_biosynth_stage_effects: "We will continue to explore this world for clues."
 
  pd_unit_04s_knowledge: "Unit 04's Engineering Designs"
- pd_unit_04s_knowledge_desc: "For helping one of it's creations Unit 04 has shared some of it's advanced engineering knowledge with us."
+ pd_unit_04s_knowledge_desc: "For helping one of its creations Unit 04 has shared some of it's advanced engineering knowledge with us."
